--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite --port=3001",
+		"dev": "concurrently --raw \"relay-compiler --watch --output=quiet-with-errors\" \"vite --port=3001\"",
 		"build": "vite build",
 		"serve": "vite preview",
-		"start": "vite"
+		"start": "vite",
+		"relay": "relay-compiler",
+		"relay:dev": "relay-compiler --watch"
 	},
 	"dependencies": {
 		"@tanstack/react-router": "^1.19.12",
@@ -16,12 +18,19 @@
 		"immer": "^10.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-relay": "^16.2.0",
+		"relay-runtime": "^16.2.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.47",
 		"@types/react-dom": "^18.2.18",
+		"@types/react-relay": "^16.0.6",
+		"@types/relay-runtime": "^14.1.23",
 		"@vitejs/plugin-react": "^4.2.1",
-		"vite": "^5.0.12"
+		"concurrently": "^8.2.2",
+		"relay-compiler": "^16.2.0",
+		"vite": "^5.0.12",
+		"vite-plugin-relay": "^2.1.0"
 	}
 }
