--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently --raw \"relay-compiler --watch --output=quiet-with-errors\" \"vite --port=3001\"",
+		"dev": "vite --port 3999",
 		"build": "vite build",
 		"serve": "vite preview",
 		"start": "vite",
@@ -11,26 +11,22 @@
 		"relay:dev": "relay-compiler --watch"
 	},
 	"dependencies": {
-		"@tanstack/react-router": "^1.19.12",
-		"@tanstack/router-devtools": "^1.19.12",
-		"@tanstack/router-vite-plugin": "^1.19.6",
-		"axios": "^1.6.5",
-		"immer": "^10.0.3",
+		"@tanstack/react-router": "^1.22.2",
+		"@tanstack/router-devtools": "^1.22.2",
+		"@tanstack/router-vite-plugin": "^1.20.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-relay": "^16.2.0",
-		"relay-runtime": "^16.2.0",
-		"zod": "^3.22.4"
+		"relay-runtime": "^16.2.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.47",
-		"@types/react-dom": "^18.2.18",
+		"@types/react": "^18.2.67",
+		"@types/react-dom": "^18.2.22",
 		"@types/react-relay": "^16.0.6",
 		"@types/relay-runtime": "^14.1.23",
 		"@vitejs/plugin-react": "^4.2.1",
-		"concurrently": "^8.2.2",
 		"relay-compiler": "^16.2.0",
-		"vite": "^5.0.12",
+		"vite": "^5.2.3",
 		"vite-plugin-relay": "^2.1.0"
 	}
 }
